--- a/øvelse13/øvelse13/Link/sender/sender.csproj
+++ b/øvelse13/øvelse13/Link/sender/sender.csproj
@@ -5,10 +5,10 @@
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <ProductVersion>8.0.30703</ProductVersion>
     <SchemaVersion>2.0</SchemaVersion>
-    <ProjectGuid>{6D10C85B-63E3-416B-A3B8-0E6498B7C1C1}</ProjectGuid>
-    <OutputType>Library</OutputType>
-    <RootNamespace>Link</RootNamespace>
-    <AssemblyName>Link</AssemblyName>
+    <ProjectGuid>{DF9E9AE7-383A-4DDC-828C-8A3496C22268}</ProjectGuid>
+    <OutputType>Exe</OutputType>
+    <RootNamespace>sender</RootNamespace>
+    <AssemblyName>sender</AssemblyName>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -18,22 +18,28 @@
     <DefineConstants>DEBUG;</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
-    <ConsolePause>false</ConsolePause>
+    <Externalconsole>true</Externalconsole>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
-    <DebugType>none</DebugType>
+    <DebugType>full</DebugType>
     <Optimize>true</Optimize>
     <OutputPath>bin\Release</OutputPath>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
-    <ConsolePause>false</ConsolePause>
+    <Externalconsole>true</Externalconsole>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="AssemblyInfo.cs" />
-    <Compile Include="Link.cs" />
+    <Compile Include="Program.cs" />
+    <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
+  <ItemGroup>
+    <ProjectReference Include="..\Link.csproj">
+      <Project>{6D10C85B-63E3-416B-A3B8-0E6498B7C1C1}</Project>
+      <Name>Link</Name>
+    </ProjectReference>
+  </ItemGroup>
 </Project>
