--- a/ovelse13/modtager/modtager_projekt/modtager_projekt.csproj
+++ b/ovelse13/modtager/modtager_projekt/modtager_projekt.csproj
@@ -3,12 +3,10 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">x86</Platform>
-    <ProductVersion>10.0.0</ProductVersion>
-    <SchemaVersion>2.0</SchemaVersion>
-    <ProjectGuid>{74B158F5-42EC-46A9-9AC7-E205635B23E9}</ProjectGuid>
+    <ProjectGuid>{AB084D2C-E4F6-4E4A-93A0-9D4BD5BC5484}</ProjectGuid>
     <OutputType>Exe</OutputType>
-    <RootNamespace>file_server</RootNamespace>
-    <AssemblyName>file_server</AssemblyName>
+    <RootNamespace>modtager_projekt</RootNamespace>
+    <AssemblyName>modtager_projekt</AssemblyName>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|x86' ">
     <DebugSymbols>true</DebugSymbols>
@@ -18,24 +16,28 @@
     <DefineConstants>DEBUG;</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
-    <PlatformTarget>x86</PlatformTarget>
     <Externalconsole>true</Externalconsole>
+    <PlatformTarget>x86</PlatformTarget>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|x86' ">
-    <DebugType>none</DebugType>
+    <DebugType>full</DebugType>
     <Optimize>true</Optimize>
     <OutputPath>bin\Release</OutputPath>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
-    <PlatformTarget>x86</PlatformTarget>
     <Externalconsole>true</Externalconsole>
+    <PlatformTarget>x86</PlatformTarget>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="AssemblyInfo.cs" />
-    <Compile Include="file_server.cs" />
+    <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="link_sender.cs" />
+    <Compile Include="link_test.cs" />
+    <Compile Include="transport_sender.cs" />
+    <Compile Include="Checksum.cs" />
+    <Compile Include="TransConst.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
 </Project>
