--- a/ovelse13/Link/Link.csproj
+++ b/ovelse13/Link/Link.csproj
@@ -6,7 +6,7 @@
     <ProductVersion>10.0.0</ProductVersion>
     <SchemaVersion>2.0</SchemaVersion>
     <ProjectGuid>{6D10C85B-63E3-416B-A3B8-0E6498B7C1C1}</ProjectGuid>
-    <OutputType>Library</OutputType>
+    <OutputType>WinExe</OutputType>
     <RootNamespace>Link</RootNamespace>
     <AssemblyName>Link</AssemblyName>
   </PropertyGroup>
@@ -34,7 +34,9 @@
   <ItemGroup>
     <Compile Include="AssemblyInfo.cs" />
     <Compile Include="Link.cs" />
-    <Compile Include="link_main.cs" />
+    <Compile Include="link_main.cs">
+      <DeployService-Deploy>True</DeployService-Deploy>
+    </Compile>
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
 </Project>
