--- a/ovelse13/file_client/file_client.csproj
+++ b/ovelse13/file_client/file_client.csproj
@@ -50,6 +50,10 @@
       <Project>{D8DF9D64-4B60-4D4C-9782-733750DEA33B}</Project>
       <Name>LIB</Name>
     </ProjectReference>
+    <ProjectReference Include="..\Link\Link.csproj">
+      <Project>{6D10C85B-63E3-416B-A3B8-0E6498B7C1C1}</Project>
+      <Name>Link</Name>
+    </ProjectReference>
     <ProjectReference Include="..\Transport\Transport.csproj">
       <Project>{981C1C09-64A7-47CD-A093-30083CCFFD03}</Project>
       <Name>Transport</Name>
